Bug 478699 - Tell the scanner it's incremental so we don't preload partial tokens. r+sr=jst