parser/htmlparser/src/nsParser.cpp
@@ -489,6 +489,7 @@ nsSpeculativeScriptThread::StartParsing(nsParser *aParser)
   if (!mScanner) {
     return NS_ERROR_OUT_OF_MEMORY;
   }
+  mScanner->SetIncremental(PR_TRUE);
 
   mDocument.swap(doc);
   mKeepParsing = PR_TRUE;
